# eosnameswaps

./: CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  eosnameswaps.abi  eosnameswaps.cpp  eosnameswaps.hpp  eosnameswaps.wasm
include/: abieos_numeric.hpp  eosnameswaps.hpp
includes/: abieos_numeric.hpp
src/: CMakeLists.txt  eosnameswaps.cpp
